--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   line-height: 1.4;
   letter-spacing: 0.6px;
 }
-h1,h2,h3{
+h1,h2,h3,h4{
     font-family: "all-round-gothic", sans-serif;
 font-weight: 700;
 letter-spacing: 7%;
