Refactor text reveal animations: replace reusable function with individual GSAP timelines for each heading, update HTML structure to include new classes for animations, and enhance CSS for smoother scrolling effects.

--- a/style.css
+++ b/style.css
@@ -5,6 +5,21 @@
   -webkit-overflow-scrolling: touch;
   outline: none;
 }
+#smooth-wrapper {
+  font-family: 'Unbounded', sans-serif;
+}
+
+.pin-spacer {
+  pointer-events: none;
+}
+
+:root {
+  --f-5-min: 30;
+	--f-5-max: 120;
+	--step-5: calc(
+		((var(--f-5-min) / 16) * 1rem) + (var(--f-5-max) - var(--f-5-min)) *
+			var(--fluid-bp));
+}
 
 html {
   background: #fff;
