--- a/gsap.css
+++ b/gsap.css
@@ -147,10 +147,9 @@ body {
     padding: 0;
 }
 .cards iframe {
-	list-style: none;
 	padding: 0;
 	margin: 0;
-	width: 14rem;
+	width: 34rem;
     height: 18rem;
 }
 @media (max-width: 768px) {
@@ -158,5 +157,10 @@ body {
         height: 60vh;}
         .cards {
             position: absolute;
-            top: 35%;}
+            margin-top: 50px;
+            bottom: 5%;}
+            .cards iframe {
+                width: 24rem;
+                height: 18rem;
+            }     
 }
