--- a/style.css
+++ b/style.css
@@ -168,26 +168,18 @@ span.text-stroke-black{
 
 
 
-.bg1{
- background-image: url(images/background1.png);
-   background-size: cover;
-   background-position: center;
-   color: white;
-   text-align: center;
- min-height: 100vh;
- background-repeat: no-repeat;
- background-attachment: fixed;
- 
-}
+
 .bg2{
  background-image: url(images/background2.png);
    background-size: cover;
    background-position: center;
    color: white;
    text-align: center;
- min-height: 100vh;
- background-repeat: no-repeat;
- background-attachment: fixed;
+    min-height: 100vh;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    z-index: 2;
+    position: relative;
 }
 
 
