--- a/gsap.css
+++ b/gsap.css
@@ -132,7 +132,7 @@ body {
 
 /* pin slides */
 
-.gallery {
+.gallery , .gallery2 {
 	position: relative;
     height: 100vh;
 	overflow: hidden;
@@ -143,6 +143,13 @@ body {
     top: 45%;
     left: 50%;
     height: 18rem;
+    display: flex;
+    padding: 0;
+}
+.cards2 {
+	position: absolute;
+    top: 35%;
+    left: 50%;
     display: flex;
     padding: 0;
 }
@@ -184,6 +191,15 @@ body {
     
     }
 
+    .newspaper div{
+        width: 400px;
+        height: 400px;
+        flex-shrink: 0;
+    }
+    .newspaper img{
+        width: 400px;
+        height: 400px;
+    }
 @media (max-width: 768px) {
     .gallery {
         height: 60vh;
@@ -197,4 +213,60 @@ body {
         width: 24rem;
         height: 18rem;
     }
+}
+
+
+.pink-wraper{
+    background: url('images/tealbg.png') no-repeat center center;
+    background-size: 100%;
+    transition: background-size 1s ease-in-out , background-position 1s ease-in-out;
+    background-position: center 240px ; 
+}
+
+
+.clip-strike{
+    position: absolute;
+    bottom: -20px;
+    width: 100px;
+    height: 150px;
+    z-index: -1;
+    left: -20px;
+}
+.grid-box{
+    padding-top: 200px;
+    background: url('images/man.png') no-repeat center bottom #fff;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+}
+.textsfor{
+    margin-left: 50px;
+    color: #000;
+}
+h2.textsfor{
+    font-size: 26px;
+    font-weight: 500;
+}
+@media (min-width: 768px) {
+    .grid-box:nth-child(1){
+        margin-left: 20px;
+        z-index: 20;
+    }
+    .grid-box:nth-child(2){
+        margin-top: -20px;
+        z-index: 10;
+        margin-left: 30px;
+    }
+    .grid-box:nth-child(3){
+        margin-right: 0px;
+    }
+    .grid-box:nth-child(4){
+        margin-top: -20px;
+        margin-left: -40px;
+    }
+}
+.stroke{
+    -webkit-text-stroke: 1px black;
+    font-weight: 900;
+    color: transparent;
+    font-size: 30px;
+    padding-bottom: 10px;
 }
