feat: add Google Tag Manager and registration banner
Added Google Tag Manager script and noscript tag to index.html for tracking purposes. Also included a fixed bottom banner with a call-to-action for registration, styled with a gradient background and text stroke effect.

--- a/style.css
+++ b/style.css
@@ -394,3 +394,7 @@ background: linear-gradient(180deg,rgba(244, 194, 125, 1) 0%, rgba(222, 108, 110
     font-size: 30px;
   }
 }
+
+/* .text-stroke {
+  -webkit-text-stroke: 1px rgba(0, 0, 0, 0.247);
+} */
